centralized write method introduced